--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "message_pack"]
 	path = message_pack
-	url = git@github.com:laxect/message_pack
+	url = https://github.com/laxect/message_pack.git
